Fixed alignment issue for mobile phones

--- a/css/general.css
+++ b/css/general.css
@@ -252,6 +252,9 @@ body {
 .margin-right-sm {
   margin-right: 1.6rem !important;
 }
+.margin-bottom-sm {
+  margin-bottom: 1.6rem !important;
+}
 
 .margin-bottom-md {
   margin-bottom: 4.8rem !important;
