--- a/css/queries.css
+++ b/css/queries.css
@@ -227,6 +227,8 @@
 
   .section-hero {
     padding: 2.4rem 6.4rem;
+    display: flex;
+    justify-content: center;
   }
 
   .btn,
@@ -274,7 +276,6 @@
     padding: 3.2rem;
   }
 }
-
 /***********************/
 /* FIXING FLEXBOX GAP(SOME BROWSER) */
 /***********************/
